# task-management-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: urls.py  views.py
config/: celery.py  redis.py  settings.py  urls.py
csv_processor/: admin.py  apps.py  models.py  pagination.py  serializers.py  tasks.py  views.py
csv_processor/migrations/: 0001_initial.py  0002_remove_csvdata_csv_data_upload__67e2c8_idx_and_more.py
scripts/: celery_worker.sh  create_superuser.sh  entrypoint.sh
tasks/: admin.py  models.py  pagination.py  serializers.py  tasks.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_description.py
templates/emails/: csv_upload_completed.html  csv_upload_completed.txt  task_completed.html  task_completed.txt  welcome.html  welcome.txt
user/: views.py
users/: admin.py  models.py  serializers.py  tasks.py  validators.py  views.py
users/migrations/: 0001_initial.py
utils/: cache.py
