[project]
name = "task-management-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "pre-commit>=4.4.0",
    "psutil>=7.1.3",
    "psycopg[binary,pool]>=3.2.12",
]
